# NAIAD

./: README.md  pyproject.toml
data/drug/: k562_data.csv  k562_ic50_data.csv  k562_ic50log_data.csv  k562_ic50log_filter_data.csv  k562_log_data.csv
data/horlbeck/: horlbeck_jurkat_gamma.csv  horlbeck_k562_gamma.csv
data/norman/: norman_gamma.csv
naiad/: __init__.py  active_learning.py  models.py  naiad.py  utils.py
paper_reproduce/fig2/: fig2.ipynb
paper_reproduce/fig3/: fig3.ipynb
paper_reproduce/fig3/gears/: GEARS_SI_Fig_17_Horlbeck_Jurkat.ipynb  GEARS_SI_Fig_17_Norman.ipynb  GEARS_SI_Fig_17_PARPi.ipynb  essential_norman.pkl
paper_reproduce/fig3/gears/results/: raw_y_pred_no_pretrain_update_seed123_nsample1000norman.csv  raw_y_pred_no_pretrain_update_seed123_nsample1250norman.csv  raw_y_pred_no_pretrain_update_seed123_nsample1500norman.csv  raw_y_pred_no_pretrain_update_seed123_nsample200norman.csv  raw_y_pred_no_pretrain_update_seed123_nsample500norman.csv  raw_y_pred_no_pretrain_update_seed618_nsample100norman.csv  raw_y_pred_no_pretrain_update_seed618_nsample1250norman.csv  raw_y_pred_no_pretrain_update_seed618_nsample1500norman.csv  raw_y_pred_no_pretrain_update_seed618_nsample200norman.csv  raw_y_pred_no_pretrain_update_seed618_nsample350norman.csv  (+7 more)
paper_reproduce/fig4/: fig4.ipynb
paper_reproduce/fig5/: fig5.ipynb
paper_reproduce/table1/: table1.ipynb
tutorials/: active_learning.ipynb  data_preparation_tutorial.ipynb  naiad_tutorial.ipynb
tutorials/data/: horlbeck_jurkat_gamma.csv  horlbeck_k562_gamma.csv  norman_gamma.csv  norman_gi.csv
(+7 files in other folders)
