[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'naiad'
version = '0.1'
requires-python = '>=3.8'
dependencies = [
    'matplotlib',
    'scikit-learn',
    'tqdm',
    'openpyxl',
    'pandas',
    'seaborn',
    'torch'
]

[tool.setuptools.packages.find]
where = ['.']
include = ['naiad']